Add hovering sketch upon mouse click

--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@
     border: 1px solid black;
 }
 
-.blue-ink{
-    background-color: blue;
+.sketch-blue {
+    background-color: blue;    
 }
+
+
