--- a/style.css
+++ b/style.css
@@ -6,11 +6,19 @@
 h1 {
     justify-content: center;
     text-align: center;
-    margin: 50px 50px 50px 50px;
+    margin: 50px 20px 20px 20px;
     padding: 10px;
 }
 
-.container{
+.header-container {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    gap: 100px;
+    font-size: large;
+}
+
+.container {
     display:flex;
     text-align: center;
     justify-content: center;
@@ -92,7 +100,6 @@ input:hover {
     width: 730px;
     justify-content: center;
     align-items: center;
-    border: 1px solid blue;
 }
 
 .grid-item {
@@ -103,7 +110,4 @@ input:hover {
 
 .grid-item:hover {
     cursor: crosshair;
-}
-.sketch-blue {
-    background-color: blue;    
 }
